# quonter-vandal

./: README.md  build_toolforge.sh  debug_run.sh  pyproject.toml
.github/workflows/: python-app.yml
quonter_vandal/: batch_runner.py  classifier.py  config.py  considering.html  diff.html  diff.py  diff_grouper.py  document_maker.py  index.html  lookup.py  proxy_server.py  results_logger.py  revision_listing.py  revision_stream.py  server.py  sse_client.py  util.py  wiki_summary.py
tests/: test_diff.py  test_diff_grouper.py  test_document_maker.py  test_lookup.py  test_revision_listing.py  test_util.py
tests/cassettes/: test_add_qualifier_and_rank_diff.yaml  test_alias_add_diff.yaml  test_amount_with_units.yaml  test_badges_change.yaml  test_buggy_lookup.yaml  test_coord_change.yaml  test_date_qualifier_change.yaml  test_date_ref_on_no_value_statement.yaml  test_description_add_diff.yaml  test_doc_non_iterable_none.yaml  test_doc_with_redirect.yaml  test_doc_with_too_many_values.yaml  test_doc_with_too_many_values_2.yaml  test_empty.yaml  test_ext_id_without_link.yaml  test_external_reference_change.yaml  test_fennel.yaml  test_form_usage.yaml  test_formula_usage.yaml  test_georgian_date.yaml  test_geoshape_usage.yaml  test_get_revisions.yaml  test_label_and_alias_diff.yaml  test_label_change_diff.yaml  test_lexeme_usage.yaml  test_lookup.yaml  test_make_revision_content.yaml  test_metre_diff.yaml  test_music_usage.yaml  test_no_such_diff.yaml  test_no_value.yaml  test_property_ends_in_rank.yaml  test_property_usage.yaml  test_quantity_statement.yaml  test_redirect_change.yaml  (+9 more)
