[tool.poetry]
name = "quonter-vandal"
version = "0.1.0"
description = ""
authors = ["Daniel Erenrich <daniel@erenrich.net>"]
readme = "README.md"
packages = [{include = "quonter_vandal"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
requests = "^2.31.0"
aiohttp = "^3.8.5"
pytest-asyncio = "^0.21.1"
pytest-vcr = "^1.0.2"
mwapi = "^0.6.1"
qwikidata = "^0.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
