[tool.poetry]
name = "quonter-vandal"
version = "0.1.0"
description = ""
authors = ["Daniel Erenrich <daniel@erenrich.net>"]
readme = "README.md"
packages = [{include = "quonter_vandal"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
requests = "^2.31.0"
aiohttp = "^3.8.5"
pytest-asyncio = "^0.21.1"
pytest-vcr = "^1.0.2"
mwapi = "^0.6.1"
qwikidata = "^0.4.2"
tqdm = "^4.66.1"
langchain = "^0.0.325"
jupyter = "^1.0.0"
openai = "^0.27.8"
wikipedia = "^1.4.0"
google-search-results = "^2.4.2"
pandas = "^2.0.3"
tiktoken = "^0.4.0"
flask = {extras = ["async"], version = "^2.3.3"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
fastapi = "^0.103.0"
gunicorn = "^21.2.0"
toolforge = "^6.0.0"
aiolimiter = "^1.1.0"
aiomysql = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
